--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -96,7 +96,7 @@
         "SDZ_Args = \"--share --api --enable-insecure-extension-access --medvram-sdxl --xformers --no-hashing --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
         "SDZ_Extensions = True\n",
         "SDZ_ControlNet = True\n",
-        "SDZ_ControlNet_Model = \"\" #@param [\"\", \"V1.5\", \"VXL1.0\"]\n",
+        "SDZ_ControlNet_Model = \"V1.5\" #@param [\"\", \"V1.5\", \"VXL1.0\"]\n",
         "SDZ_Big_Models = True\n",
         "SDZ_Upscalers = True\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
@@ -291,69 +291,70 @@
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
-        "        link = \"https://github.com/etherealxx/batchlinks-web ui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/camenduru/sd-civitai-browser\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/DominikDoom/a1111-sd-web ui-tagcomplete\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/zanllp/sd-web ui-infinite-image-browsing\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/AlUlkesh/stable-diffusion-web ui-images-browser\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/camenduru/sd-web ui-tunnels\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/yankooliveira/sd-web ui-photopea-embed\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/Physton/sd-web ui-prompt-all-in-one\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/P2Enjoy/sd-web ui-roop-uncensored\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/s0md3v/sd-web ui-roop\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/alemelis/sd-web ui-ar\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/richrobber2/canvas-zoom\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/viyiviyi/stable-diffusion-web ui-zoomimage\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/deforum-art/sd-web ui-deforum\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        link = \"https://github.com/ArtVentureX/sd-web ui-agent-scheduler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/jtydhr88/sd-canvas-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/thygate/stable-diffusion-web ui-depthmap-script\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/Extraltodeus/depthmap2mask\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/graemeniedermayer/stable-diffusion-web ui-normalmap-script\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/Bing-su/adetailer\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/volotat/SD-CN-Animation\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/Scholar01/sd-web ui-mov2mov\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui-promptgen\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/imrayya/stable-diffusion-web ui-Prompt_Generator\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/lobehub/sd-web ui-lobe-theme\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/v8hid/infinite-zoom-automatic1111-web ui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/opparco/stable-diffusion-web ui-two-shot\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/hako-mikan/sd-web ui-regional-prompter\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/opparco/stable-diffusion-web ui-composable-lora\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/jexom/sd-web ui-depth-lib\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/ZhUyU1997/open-pose-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/nonnonstop/sd-web ui-3d-open-pose-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/hnmr293/posex\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/fkunn1326/openpose-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/butaixianran/Stable-Diffusion-Web ui-Civitai-Helper\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui-pixelization\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/s9roll7/ebsynth_utility\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/journey-ad/sd-web ui-bilingual-localization\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/Akegarasu/sd-web ui-model-converter\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/hako-mikan/sd-web ui-supermerger\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/bbc-mc/sdweb-merge-block-weighted-gui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/arenasys/stable-diffusion-web ui-model-toolkit\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/fishslot/video_loopback_for_web ui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/mcmonkeyprojects/sd-dynamic-thresholding\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/kohya-ss/sd-web ui-additional-networks\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/hnmr293/sd-web ui-llul\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/hnmr293/sd-web ui-cutoff\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui-rembg\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/camenduru/stable-diffusion-web ui-huggingface\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/AIrjen/OneButtonPrompt\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/Uminosachi/sd-web ui-inpaint-anything\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/CiaraStrawberry/TemporalKit\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/sunnyark/civitai-shortcut\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/aleSheng/sd-web ui-dragGAN-extension\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/Elldreth/loopback_scaler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/jtydhr88/sd-web ui-3d-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/jtydhr88/sd-3dmodel-loader\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/jtydhr88/sd-web ui-txt-img-to-3d-model\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/missionfloyd/web ui-qrcode-generator\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/antfu/sd-web ui-qrcode-toolkit\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/continue-revolution/sd-web ui-animatediff\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
-        "        #link = \"https://github.com/wcde/sd-web ui-refiner\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "\n",
+        "    link = \"https://github.com/etherealxx/batchlinks-web ui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    link = \"https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/camenduru/sd-civitai-browser\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    link = \"https://github.com/DominikDoom/a1111-sd-web ui-tagcomplete\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    link = \"https://github.com/zanllp/sd-web ui-infinite-image-browsing\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/AlUlkesh/stable-diffusion-web ui-images-browser\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    link = \"https://github.com/camenduru/sd-web ui-tunnels\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    link = \"https://github.com/yankooliveira/sd-web ui-photopea-embed\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    link = \"https://github.com/Physton/sd-web ui-prompt-all-in-one\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/P2Enjoy/sd-web ui-roop-uncensored\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/s0md3v/sd-web ui-roop\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/alemelis/sd-web ui-ar\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    link = \"https://github.com/richrobber2/canvas-zoom\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    link = \"https://github.com/viyiviyi/stable-diffusion-web ui-zoomimage\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/deforum-art/sd-web ui-deforum\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    link = \"https://github.com/ArtVentureX/sd-web ui-agent-scheduler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/jtydhr88/sd-canvas-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/thygate/stable-diffusion-web ui-depthmap-script\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/Extraltodeus/depthmap2mask\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/graemeniedermayer/stable-diffusion-web ui-normalmap-script\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/Bing-su/adetailer\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/volotat/SD-CN-Animation\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/Scholar01/sd-web ui-mov2mov\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui-promptgen\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/imrayya/stable-diffusion-web ui-Prompt_Generator\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/lobehub/sd-web ui-lobe-theme\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/v8hid/infinite-zoom-automatic1111-web ui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/opparco/stable-diffusion-web ui-two-shot\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/hako-mikan/sd-web ui-regional-prompter\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/opparco/stable-diffusion-web ui-composable-lora\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/jexom/sd-web ui-depth-lib\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/ZhUyU1997/open-pose-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/nonnonstop/sd-web ui-3d-open-pose-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/hnmr293/posex\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/fkunn1326/openpose-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/butaixianran/Stable-Diffusion-Web ui-Civitai-Helper\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui-pixelization\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/s9roll7/ebsynth_utility\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/journey-ad/sd-web ui-bilingual-localization\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/Akegarasu/sd-web ui-model-converter\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/hako-mikan/sd-web ui-supermerger\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/bbc-mc/sdweb-merge-block-weighted-gui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/arenasys/stable-diffusion-web ui-model-toolkit\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/fishslot/video_loopback_for_web ui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/mcmonkeyprojects/sd-dynamic-thresholding\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/kohya-ss/sd-web ui-additional-networks\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/hnmr293/sd-web ui-llul\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/hnmr293/sd-web ui-cutoff\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui-rembg\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/camenduru/stable-diffusion-web ui-huggingface\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/AIrjen/OneButtonPrompt\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/Uminosachi/sd-web ui-inpaint-anything\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/CiaraStrawberry/TemporalKit\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/sunnyark/civitai-shortcut\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/aleSheng/sd-web ui-dragGAN-extension\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/Elldreth/loopback_scaler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/jtydhr88/sd-web ui-3d-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/jtydhr88/sd-3dmodel-loader\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/jtydhr88/sd-web ui-txt-img-to-3d-model\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/missionfloyd/web ui-qrcode-generator\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/antfu/sd-web ui-qrcode-toolkit\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/continue-revolution/sd-web ui-animatediff\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/wcde/sd-web ui-refiner\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "    %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
