--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -96,7 +96,7 @@
         "SDZ_Args = \"--share --api --enable-insecure-extension-access --medvram-sdxl --xformers --no-hashing --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
         "SDZ_Extensions = True\n",
         "SDZ_ControlNet = True\n",
-        "SDZ_ControlNet_Model = \"V1.5\" #@param [\"\", \"V1.5\", \"VXL1.0\"]\n",
+        "SDZ_ControlNet_Model = \"\" #@param [\"\", \"V1.5\", \"VXL1.0\"]\n",
         "SDZ_Big_Models = True\n",
         "SDZ_Upscalers = True\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
