--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -282,6 +282,7 @@
         "      !wget --timestamping https://civitai.com/api/download/models/117955 -O topo_v4.safetensors\n",
         "      #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
         "      !wget --timestamping https://civitai.com/api/download/models/62833 -O add_detail.safetensors\n",
+        "      !wget --timestamping https://civitai.com/api/download/models/118945 -O epiCRealismHelper.safetensors\n",
         "    %cd ../..\n",
         "\n",
         "    %cd embeddings\n",
@@ -301,6 +302,7 @@
         "    link = \"https://github.com/camenduru/sd-web ui-tunnels\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "    link = \"https://github.com/yankooliveira/sd-web ui-photopea-embed\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "    link = \"https://github.com/Physton/sd-web ui-prompt-all-in-one\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "    #link = \"https://github.com/glucauze/sd-web ui-faceswaplab \"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "    #link = \"https://github.com/P2Enjoy/sd-web ui-roop-uncensored\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "    #link = \"https://github.com/s0md3v/sd-web ui-roop\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "    #link = \"https://github.com/alemelis/sd-web ui-ar\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
