--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -42,6 +42,287 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "<details>\n",
+        "  <summary><font color=gray>CODE CONNECT COLAB</summary>\n",
+        "\n",
+        "\n",
+        "\n",
+        "```diff\n",
+        "function ClickConnect() {\n",
+        "  var iconElement = document.getElementById(\"toggle-header-button\");\n",
+        "  if (iconElement) {\n",
+        "    var clickEvent = new MouseEvent(\"click\", {\n",
+        "      bubbles: true,\n",
+        "      cancelable: true,\n",
+        "      view: window\n",
+        "    });\n",
+        "    iconElement.dispatchEvent(clickEvent);\n",
+        "  }\n",
+        "}\n",
+        "setInterval(ClickConnect, 6000);\n",
+        "```\n",
+        "</details>\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "im9bdUY-HXAG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/ddPn08/kohya-sd-scripts-webui\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a>\n",
+        "\n",
+        "import os\n",
+        "import shutil\n",
+        "import urllib.request\n",
+        "#from IPython.utils import capture\n",
+        "from IPython.utils.capture import capture_output\n",
+        "from IPython.display import clear_output\n",
+        "import sys\n",
+        "import fileinput\n",
+        "import ipywidgets as widgets\n",
+        "from ipywidgets import HBox, VBox\n",
+        "from ipywidgets import interact, interactive, fixed\n",
+        "from ipywidgets import Layout, SelectMultiple\n",
+        "from IPython.core.display import HTML\n",
+        "\n",
+        "SDZ_install = \"/content/sample_data\"\n",
+        "SDZ_install_widget = widgets.Text(value=SDZ_install, description=\"SDZ_install\")\n",
+        "SDZ_Version = widgets.Dropdown(options=[\"V1.5\", \"V2.1\"], description=\"Version\")\n",
+        "Download_Base_Model = widgets.Dropdown(options=[\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.pix2pix\", \"V2.1\"], description=\"Model\")\n",
+        "SDZ = \"zzz\"\n",
+        "SDZ_widget = widgets.Text(value=SDZ, description=\"SDZ\")\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'zzz')\n",
+        "SDZ_webui_path_widget = widgets.Text(value=SDZ_webui_path, description=\"SDZ_webui_path\")\n",
+        "model_init = widgets.Text(value=\"\", description=\"Model_init\")\n",
+        "models_dir = widgets.Text(value=\"\", description=\"Models_dir\")\n",
+        "SDZ_Args = widgets.Text(value=\"\", description=\"Args\")\n",
+        "SDZ_Training = widgets.Dropdown(options=[\"\", \"Kohya\", \"New_Dreambooth\", \"Old_Dreambooth\"], description=\"Training\")\n",
+        "\n",
+        "canny = widgets.Checkbox(value=False, description=\"canny\")\n",
+        "depth = widgets.Checkbox(value=False, description=\"depth\")\n",
+        "hed = widgets.Checkbox(value=False, description=\"hed\")\n",
+        "mlsd = widgets.Checkbox(value=False, description=\"mlsd\")\n",
+        "normal = widgets.Checkbox(value=False, description=\"normal\")\n",
+        "openpose = widgets.Checkbox(value=False, description=\"openpose\")\n",
+        "scribble = widgets.Checkbox(value=False, description=\"scribble\")\n",
+        "seg = widgets.Checkbox(value=False, description=\"seg\")\n",
+        "\n",
+        "SDZ_Extensions = widgets.Checkbox(value=False, description=\"Extensions\")\n",
+        "SDZ_Upscaler = widgets.Checkbox(value=False, description=\"Upscalers\")\n",
+        "SDZ_Big_Models = widgets.Checkbox(value=False, description=\"Big_Models\")\n",
+        "SDZ_Continue = widgets.Checkbox(value=False, description=\"🔵 SDZ CONTINUE\")\n",
+        "\n",
+        "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
+        "share = \"--share --api --cors-allow-origins=https://www.painthua.com --xformers --theme=dark --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae\" + \" --ckpt=\" + model_init.value + \" --ckpt-dir=\" + models_dir.value + \" \" + SDZ_Args.value\n",
+        "\n",
+        "os.chdir(SDZ_install_widget.value)\n",
+        "boton_runSDZ = widgets.Button(description=\"⭕ RUN > > > SDZ\")\n",
+        "boton_runSDZ.style.button_color = '#1e1e1e'\n",
+        "boton_runSDZ.style.font_weight = 'bold'\n",
+        "boton_runSDZ.style.color = 'black'\n",
+        "\n",
+        "left_box = widgets.VBox([canny, depth, hed, mlsd])\n",
+        "right_box = widgets.VBox([normal, openpose, scribble, seg])\n",
+        "group_box = widgets.HBox([left_box, right_box],layout=widgets.Layout(height='155px', width='100%'))\n",
+        "\n",
+        "left_box.layout.max_width = '150px'\n",
+        "right_box.layout.max_width = '170px'\n",
+        "left_box.layout.overflow = 'hidden'\n",
+        "right_box.layout.overflow = 'hidden'\n",
+        "\n",
+        "widgets_box = widgets.VBox([SDZ_install_widget, SDZ_Version, Download_Base_Model,],layout=widgets.Layout(height='120px', width='100%'))\n",
+        "final_box = widgets.VBox([model_init, models_dir, SDZ_Args, SDZ_Training],layout=widgets.Layout(height='160px', width='100%'))\n",
+        "final_box1 = widgets.VBox([SDZ_Extensions, SDZ_Upscaler, SDZ_Big_Models],layout=widgets.Layout(height='140px', width='100%'))\n",
+        "final_box2 = widgets.VBox([SDZ_Continue],layout=widgets.Layout(height='90px', width='100%'))\n",
+        "\n",
+        "# SDZ_RunSDZ\n",
+        "def runSDZ(b):\n",
+        "    global widgets_box, boton_runSDZ\n",
+        "    widgets_box.close()\n",
+        "    final_box.close()\n",
+        "    final_box1.close()\n",
+        "    final_box2.close()\n",
+        "    group_box.close()\n",
+        "    boton_runSDZ.close()\n",
+        "    group_title.close()\n",
+        "\n",
+        "    if not SDZ_Continue.value:\n",
+        "      with capture_output() as cap:\n",
+        "        import os\n",
+        "        if os.path.exists(SDZ_widget.value):\n",
+        "          shutil.rmtree(SDZ_widget.value)\n",
+        "        import os; link = \"https://github.com/AUTO MATI C1 1 11/st able-dif fusion-web ui.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} zzz\")\n",
+        "\n",
+        "        import os\n",
+        "        if not os.path.exists(SDZ_widget.value):\n",
+        "          import os; link = \"https://github.com/AUTO MATI C1 1 11/st able-dif fusion-web ui.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} zzz\")\n",
+        "\n",
+        "        %cd zzz\n",
+        "\n",
+        "        clear_output()\n",
+        "      print('[1;96mInstalling SDZ ✓')\n",
+        "\n",
+        "    if SDZ_Continue.value:\n",
+        "      with capture_output() as cap:\n",
+        "        import os\n",
+        "        os.chdir(SDZ_webui_path_widget.value)\n",
+        "        clear_output()\n",
+        "      print('[1;96mPreparing SDZ Continue ✓')\n",
+        "\n",
+        "    with capture_output() as cap:\n",
+        "      import os\n",
+        "      os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+        "      !apt --fix-broken install\n",
+        "      !pip install fastapi==0.94.0 -qq\n",
+        "\n",
+        "# SDZ_Models\n",
+        "      os.chdir(SDZ_webui_path_widget.value)\n",
+        "      %cd models/Stable-diffusion\n",
+        "      selected_option = Download_Base_Model.value\n",
+        "      if selected_option == \"V1.5\":\n",
+        "        !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "\n",
+        "      elif selected_option == \"V1.5.inpaint\":\n",
+        "        !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
+        "\n",
+        "      elif selected_option == \"V1.5.pix2pix\":\n",
+        "        !wget https://huggingface.co/timbrooks/instruct-pix2pix/resolve/main/instruct-pix2pix-00-22000.safetensors -O v15pix2pix.safetensors\n",
+        "\n",
+        "      elif selected_option == \"V2.1\":\n",
+        "        !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "\n",
+        "      else: selected_option == \"\"\n",
+        "      os.chdir(SDZ_webui_path_widget.value)\n",
+        "\n",
+        "# SDZ_Extensions\n",
+        "      if SDZ_Extensions.value:\n",
+        "        os.chdir(SDZ_webui_path_widget.value)\n",
+        "        %cd extensions\n",
+        "\n",
+        "        %cd ..\n",
+        "\n",
+        "        clear_output()\n",
+        "    print('[1;90mPreparing SDZ System ✓')\n",
+        "\n",
+        "    selected_option = SDZ_Version.value\n",
+        "    if selected_option == \"V1.5\":\n",
+        "        !python launch.py $share\n",
+        "    elif selected_option == \"V2.1\":\n",
+        "        !python launch.py\n",
+        "SDZconfigV2\n",
+        "\n",
+        "boton_runSDZ.on_click(runSDZ)\n",
+        "group_title = widgets.HTML(value='ControlNet')\n",
+        "group_title2 = widgets.HTML(value='')\n",
+        "display(widgets_box, group_title, group_box, group_title2, final_box, final_box1, final_box2, boton_runSDZ)"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "iPl5IolfMAMh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\\\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Kyfqo5F0xMmo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/ddPn08/kohya-sd-scripts-webui\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a>\n",
@@ -101,7 +382,7 @@
         "SDZ_Upscalers = True\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
-        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "#share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "share = SDZ_Args\n",
@@ -173,7 +454,7 @@
         "    with capture.capture_output() as cap:\n",
         "      if os.path.exists(SDZ):\n",
         "        shutil.rmtree(SDZ)\n",
-        "        import os; link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
+        "        import os; link = \"https://github.com/AUTO MATI C1 1 11/st able-dif fusion-web ui.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
         "        #import os; link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ\")\n",
         "\n",
         "      if not os.path.exists(SDZ):\n",
@@ -463,97 +744,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\\\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "Kyfqo5F0xMmo"
-      }
     },
     {
       "cell_type": "code",
